Thu May 22 21:24:15 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (top_local_setup): fixed memory leak bug based on a
	  patch from Roger Pack <rogerpack2005 at gmail.com> in
	  [ruby-core:16610].

Thu May 22 14:20:54 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (flatten): check if reentered.  [ruby-dev:34798]

Thu May 22 08:28:49 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (flatten): free memo hash table before raising exception.
	  [ruby-dev:34789]

Thu May 22 06:30:10 2008  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* array.c (flatten): fix memory leak.

Thu May 22 05:45:30 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* proc.c (proc_dup): should copy safe_level from src proc
	  properly.  a patch from Keita Yamaguchi
	  <keita.yamaguchi at gmail.com>

Wed May 21 23:31:44 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_get_method_body, rb_alias, rb_eval): should not cache
	  uninitialized value, since search_method doesn't set origin if the
	  method wasn't found.

	* eval.c (search_method, remove_method, error_print, rb_alias)
	  (rb_eval, rb_rescue2, search_required, Init_eval, rb_thread_create),
	  gc.c (rb_source_filename, Init_stack), io.c (rb_io_getline),
	  parse.y (rb_id2name, rb_parser_free): suppress warnings.

Wed May 21 12:34:51 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_delete): rdoc fix based on a patch from Gaston Ramos
	  <ramos.gaston AT gmail.com>.  [ruby-core:16825]

Tue May 20 13:15:46 2008  Akinori MUSHA  <knu@iDaemons.org>

	* file.c (lchmod_internal): Remove a compiler warning.

Mon May 19 18:22:35 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/openssl/ossl_pkcs5.c (ossl_pkcs5_pbkdf2_hmac): Fix the type
	  of md; pointed out by Takahiro Kambe <taca at back-street.net>
	  in [ruby-dev:34748].

Mon May 19 14:20:13 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* sprintf.c (rb_f_sprintf): fixed SEGV on win32 with "% 0e" % 1.0/0.0.
